# dart

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  config.yaml  config_part.yaml  input.csv  partitioning-off.yaml  partitioning-on.yaml
designs/: keepme
docs/: concepts.md  example.md  install.md  running.md
docs/tutorial/: readme.md  ultra96v2-tutorial.md
docs/tutorial/1rr/: dart.yaml  readme.md
docs/tutorial/2rr/: dart-pblocks.xdc  dart.yaml  readme.md
docs/tutorial/min/: dart.yaml  run.sh
docs/tutorial/part/: dart.yaml  readme.md  run.sh
include/: fine_grained.h  fpga.h  generate_xdc.h  milp_solver_interface.h  pynq.h  pynq_fine_grained.h  ultrascale.h  ultrascale_96.h  ultrascale_96_fine_grained.h  ultrascale_fine_grained.h  zynq.h  zynq_model.h
inputs/: pr_input.csv
lixo/: flora_input.csv  impl.tcl  ooc_synth.tcl  vivado.jou  vivado_9813.backup.jou
lixo/Sources/constraints/: pblocks.xdc
lixo/Sources/cores/FFT_ifft/: auxiliary.xml  component.xml  fft_top_info.xml  pack.sh  run_ippack.tcl  tmp.xpr  vivado.jou
lixo/Sources/cores/FFT_ifft/doc/: ReleaseNotes.txt
lixo/Sources/cores/FFT_ifft/example/: ipi_example.sh  ipi_example.tcl
lixo/Sources/cores/FFT_ifft/hdl/ip/: fft_config1_s_core.vhd
lixo/Sources/cores/FFT_ifft/hdl/verilog/: dummy_proc_be.v  dummy_proc_fe11.v  dummy_proc_middle.v  fft_config1_1.v  fft_config1_s.v  fft_top.v  fft_top_ctrl_bus_s_axi.v  fft_top_mem_bus_m_axi.v  fifo_w16_d2_A.v  fifo_w32_d1024_A.v  fifo_w32_d5_A.v  fifo_w8_d2_A.v  start_for_dummy_proc_be_U0.v  start_for_dummy_proc_middle_U0.v  start_for_fft_config1_1_U0.v  start_for_fft_config1_U0.v
lixo/Sources/cores/FFT_ifft/hdl/vhdl/: dummy_proc_be.vhd  dummy_proc_fe11.vhd  dummy_proc_middle.vhd  fft_config1_1.vhd  fft_config1_s.vhd  fft_top.vhd  fft_top_ctrl_bus_s_axi.vhd  fft_top_mem_bus_m_axi.vhd  fifo_w16_d2_A.vhd  fifo_w32_d1024_A.vhd  fifo_w32_d5_A.vhd  fifo_w8_d2_A.vhd  start_for_dummy_proc_be_U0.vhd  start_for_dummy_proc_middle_U0.vhd  start_for_fft_config1_1_U0.vhd  start_for_fft_config1_U0.vhd
lixo/Sources/cores/FFT_ifft/subcore/: fft_config1_1_core_ip.tcl  fft_config1_s_core_ip.tcl
lixo/Sources/cores/FFT_ifft/xgui/: fft_top_v1_0.tcl
lixo/Sources/cores/dct/: auxiliary.xml  component.xml  pack.sh  run_ippack.tcl  top_fdct_info.xml  vivado.jou
lixo/Sources/cores/dct/doc/: ReleaseNotes.txt
lixo/Sources/cores/dct/example/: ipi_example.sh  ipi_example.tcl
lixo/Sources/cores/dct/hdl/verilog/: new_dct_1d_1.v  new_dct_1d_2.v  top_fdct.v  top_fdct_ctrl_bus_s_axi.v  top_fdct_mac_muladd_16s_13ns_29s_29_1_1.v  top_fdct_mac_muladd_16s_13s_14ns_28_1_1.v  top_fdct_mac_muladd_16s_13s_29s_29_1_1.v  top_fdct_mac_muladd_16s_14ns_14ns_29_1_1.v  top_fdct_mac_muladd_16s_14ns_28s_29_1_1.v  top_fdct_mac_muladd_16s_14ns_29s_29_1_1.v  top_fdct_mac_muladd_16s_14s_14ns_29_1_1.v  top_fdct_mac_muladd_16s_14s_29s_29_1_1.v  top_fdct_mac_muladd_16s_15ns_14ns_29_1_1.v  top_fdct_mac_muladd_16s_15ns_29s_29_1_1.v  top_fdct_mac_muladd_16s_15s_14ns_29_1_1.v  top_fdct_mac_muladd_16s_15s_29s_29_1_1.v  top_fdct_mem_bus_m_axi.v  top_fdct_mul_mul_16s_13ns_29_1_1.v  top_fdct_mul_mul_16s_13s_29_1_1.v  top_fdct_mul_mul_16s_14ns_29_1_1.v  top_fdct_mul_mul_16s_14s_29_1_1.v  top_fdct_mul_mul_16s_15ns_29_1_1.v  top_fdct_mul_mul_16s_15s_29_1_1.v  top_fdct_row_outbuf.v
lixo/Sources/cores/dct/hdl/vhdl/: new_dct_1d_1.vhd  new_dct_1d_2.vhd  top_fdct.vhd  top_fdct_ctrl_bus_s_axi.vhd  top_fdct_mac_muladd_16s_13ns_29s_29_1_1.vhd  top_fdct_mac_muladd_16s_13s_14ns_28_1_1.vhd  top_fdct_mac_muladd_16s_13s_29s_29_1_1.vhd  top_fdct_mac_muladd_16s_14ns_14ns_29_1_1.vhd  top_fdct_mac_muladd_16s_14ns_28s_29_1_1.vhd  top_fdct_mac_muladd_16s_14ns_29s_29_1_1.vhd  top_fdct_mac_muladd_16s_14s_14ns_29_1_1.vhd  top_fdct_mac_muladd_16s_14s_29s_29_1_1.vhd  (+12 more)
lixo/Sources/cores/dct/xgui/: top_fdct_v1_0.tcl
lixo/Sources/project/: FFT_ifft.prj  dct.prj
lixo/Synth/FFT_ifft/: fft_top_synth.dcp  fft_top_synth_design.rds  fft_top_utilization_synth.rpt
lixo/Synth/dct/: top_fdct_synth.dcp  top_fdct_synth_design.rds  top_fdct_utilization_synth.rpt
lixo/Tcl/: run.tcl
lixo/hd_visual/: pblock_slot_0_FrameTiles.tcl  pblock_slot_0_GlitchTiles.tcl  pblock_slot_0_RangedSites.tcl
src/: .fpga.cpp.swp  .model_zynq.cpp.swp  diff  fpga.cpp  milp_model_pynq.cpp  milp_model_pynq_with_partition.cpp  milp_model_us.cpp  milp_model_us_96.cpp  milp_model_zynq.cpp  milp_model_zynq_with_partition.cpp  model_zynq.cpp  partition.cpp  us_96.cpp  us_96_fine_grained.cpp  us_fine_grained.cpp  zynq.cpp
src/devices/pynq/: CMakeLists.txt  milp_model_pynq.cpp  milp_model_pynq_with_partition.cpp
src/devices/us/: CMakeLists.txt
src/devices/us_96/: CMakeLists.txt
src/devices/zcu_102/: CMakeLists.txt  milp_model_us.cpp  milp_model_us_with_partition.cpp  us.cpp
src/devices/zynq/: CMakeLists.txt  milp_model_zynq.cpp
tests/: configuration.cfg  readme.md
tests/minimal/: part-off.yaml  part-on.yaml  readme.md  run.sh
tools/: load_prj.py  start_vivado
tools/Tcl/: check_ip_interface.tcl  run.tcl  synthesize.tcl
tools/acc_bbox_ip/: acc_info.xml  auxiliary.xml  component.xml  pack.sh  run_ippack.tcl  vivado.jou
tools/acc_bbox_ip/doc/: ReleaseNotes.txt
tools/acc_bbox_ip/drivers/acc_v1_0/data/: acc.mdd  acc.tcl
tools/acc_bbox_ip/drivers/acc_v1_0/src/: Makefile  xacc.c  xacc.h  xacc_hw.h  xacc_linux.c  xacc_sinit.c
tools/acc_bbox_ip/example/: ipi_example.sh
tools/acc_bbox_ip/hdl/verilog/: Block_proc4.v  acc.v  acc_ctrl_bus_s_axi.v  acc_mem_bus_m_axi.v  acc_mod.v  acc_mod_mat_a_0_V.v  acc_mod_mat_p_V.v  acc_mul_64s_64s_6bkb.v
tools/acc_bbox_ip/hdl/vhdl/: Block_proc4.vhd  acc.vhd  acc_ctrl_bus_s_axi.vhd  acc_mem_bus_m_axi.vhd  acc_mod.vhd  acc_mod_mat_a_0_V.vhd  acc_mod_mat_p_V.vhd  acc_mul_64s_64s_6bkb.vhd  fifo_w32_d2_A.vhd
tools/acc_bbox_ip/xgui/: acc_v1_0.tcl
tools/cmake/: FindGUROBI.cmake
tools/synth_static/: design_1_wrapper_synth.dcp
without_gui/include/: .flora.h.swp  flora.h  gen_wrapper.h  pr_tool.h  version.h
without_gui/src/: .main.cpp.swp  .pr_tool.cpp.swp  flora.cpp  main.cpp  pr_tool.cpp  run
(+23 files in other folders)
